config/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"catserver"}]'
    app.openshift.io/route-disabled: "false"
  labels:
    app: grumpycat
    app.kubernetes.io/component: grumpycat
    app.kubernetes.io/instance: grumpycat
    app.kubernetes.io/name: grumpycat
    app.kubernetes.io/part-of: grumpycat-app
  name: grumpycat
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: grumpycat
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: grumpycat
        deploymentconfig: grumpycat
    spec:
      containers:
      - image: quay.io/wpernath/quarkus-grumpycat:latest
        imagePullPolicy: IfNotPresent
        name: grumpycat
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: 
          limits:
            cpu: 1000m
            memory: 1024Mi
          requests:
            cpu: 5m
            memory: 256Mi 
      dnsPolicy: ClusterFirst
      restartPolicy: Always
