config/base/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"catserver"}]'    
  labels:
    app: cat
    app.kubernetes.io/component: cat
    app.kubernetes.io/instance: cat
    app.kubernetes.io/name: cat
    app.kubernetes.io/part-of: grumpycat-app
  name: cat
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: cat
    deploymentconfig: cat
  sessionAffinity: None
  type: ClusterIP
