config/base/client-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"catserver"}]'
  labels:
    app: cat
    app.kubernetes.io/component: cat
    app.kubernetes.io/instance: cat
    app.kubernetes.io/name: cat
    app.kubernetes.io/part-of: grumpycat-app
  name: cat
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: cat
    weight: 100
  wildcardPolicy: None
